sample/retrieveUnpackaged/objects/Anzic_Code__c.object
<CustomObject>
    <description>Anzic Code for the customer</description>
    <fields>
        <fullName>ANZSIC_External_Code_ID__c</fullName>
        <description>Code for the Anzsic description</description>
        <externalId>true</externalId>
        <label>ANZSIC External Code ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaterMAP_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WaterMAP Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>ANZSIC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>ANZSIC_External_Code_ID__c</columns>
        <columns>WaterMAP_Visible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>WaterMAP_ANZSIC</fullName>
        <columns>NAME</columns>
        <columns>ANZSIC_External_Code_ID__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WaterMAP_Visible__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>WaterMAP ANZSIC</label>
    </listViews>
    <nameField>
        <label>Anzic Code</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000FMdNEAW_00N90000001mnL5EAI</fullName>
        <active>true</active>
        <errorMessage>Only ANZSIC codes visible to WaterMAP will be displayed</errorMessage>
        <field>WaterMAP__c.ANZSIC__c</field>
        <filterItems>
            <field>Anzic_Code__c.WaterMAP_Visible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>WaterMAP_ANZSIC</name>
    </namedFilters>
    <pluralLabel>ANZSIC</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>